Fix logo height on mobiles

--- a/assets/scss/components/site-header/_mobile.scss
+++ b/assets/scss/components/site-header/_mobile.scss
@@ -131,6 +131,12 @@
             color: currentColor;
         }
     }
+
+    .site-logo {
+        img {
+            max-height: 30px;
+        }
+    }
 }
 
 body:not(.has-site-header-fixed) {
