--- a/style-rtl.css
+++ b/style-rtl.css
@@ -110,7 +110,15 @@ Table of Contents
 :root {
   --theme-transition-duration: 0.4s;
   --theme-transition-easing: cubic-bezier(0.25, 0.1, 0.25, 1);
-  --theme-transition: all var(--theme-transition-duration) var(--theme-transition-easing); }
+  --theme-transition: all var(--theme-transition-duration) var(--theme-transition-easing);
+  --theme-header-logo-height-settings: 22;
+  --theme-header-logo-height: calc(var(--theme-spacing-fluid) * var(--theme-header-logo-height-settings) / var(--theme-body-font-size));
+  --theme-header-height-settings: 118;
+  --theme-header-height: calc(var(--theme-spacing-fluid) * var(--theme-header-height-settings) / var(--theme-body-font-size));
+  --theme-header-links-spacing-settings: 32;
+  --theme-header-links-spacing: calc( var(--theme-spacing-fluid) * var(--theme-header-links-spacing-settings) / var(--theme-body-font-size));
+  --theme-header-sides-spacing-settings: 48;
+  --theme-header-sides-spacing: calc( var(--theme-spacing-fluid) * var(--theme-header-sides-spacing-settings) /  var(--theme-body-font-size) ); }
 
 /* 0. Reset */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -1017,7 +1025,7 @@ ul.menu a,
   top: 0;
   right: 0;
   z-index: 1100;
-  padding: 1em;
+  padding: 1em var(--theme-header-sides-spacing) 1em 1em;
   cursor: pointer; }
   .admin-bar .c-menu-toggle__wrap {
     top: 32px; }
@@ -1172,18 +1180,18 @@ ul.menu a,
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1em; }
+    padding: 1em var(--theme-header-sides-spacing); }
     .site-header--mobile .menu-item--cart {
       display: flex;
       position: absolute;
       top: 50%;
-      left: 1em;
+      left: var(--theme-header-sides-spacing);
       transform: translateY(-50%); }
       .site-header--mobile .menu-item--cart > a {
         color: currentColor; }
-  body:not(.has-fixed-site-header) .site-header--mobile {
+  body:not(.has-site-header-fixed) .site-header--mobile {
     background-color: var(--current-light-primary); }
-    body:not(.has-fixed-site-header) .site-header--mobile:after {
+    body:not(.has-site-header-fixed) .site-header--mobile:after {
       content: "";
       display: block;
       position: absolute;
@@ -1195,20 +1203,20 @@ ul.menu a,
       opacity: 0.1;
       pointer-events: none;
       transition: opacity 0.3s ease; }
-    body:not(.has-fixed-site-header) .site-header--mobile .c-logo__default {
+    body:not(.has-site-header-fixed) .site-header--mobile .c-logo__default {
       opacity: 1; }
-    body:not(.has-fixed-site-header) .site-header--mobile .c-logo__inverted {
+    body:not(.has-site-header-fixed) .site-header--mobile .c-logo__inverted {
       opacity: 0; }
-  body:not(.has-fixed-site-header).is-dark-mode .site-header--mobile .c-logo__inverted {
+  body:not(.has-site-header-fixed).is-dark-mode .site-header--mobile .c-logo__inverted {
     opacity: 1; }
-  body:not(.has-fixed-site-header).is-dark-mode .site-header--mobile .c-logo__default {
+  body:not(.has-site-header-fixed).is-dark-mode .site-header--mobile .c-logo__default {
     opacity: 0; }
   .sub-menu {
-    margin-right: -1em;
-    margin-left: -1em; }
+    margin-right: calc(var(--theme-header-sides-spacing) * -1);
+    margin-left: calc(var(--theme-header-sides-spacing) * -1); }
     .sub-menu > li {
-      padding-right: 1em;
-      padding-left: 1em; }
+      padding-right: var(--theme-header-sides-spacing);
+      padding-left: var(--theme-header-sides-spacing); }
   .site-header,
   .c-menu-toggle__slice {
     transition: transform .3s ease-out; }
@@ -1280,7 +1288,7 @@ ul.menu a,
     z-index: 1000;
     display: flex;
     align-items: center;
-    min-height: calc( var(--theme-header-height) * var(--theme-customify-unit));
+    min-height: var(--theme-header-height);
     padding-top: 1em;
     padding-bottom: 1em;
     transition: var(--theme-transition);
@@ -1320,6 +1328,10 @@ ul.menu a,
     pointer-events: none;
     transition: --theme-transition;
     transition-property: opacity; } }
+
+.site-header__inner-container[class] {
+  padding-right: var(--theme-header-sides-spacing);
+  padding-left: var(--theme-header-sides-spacing); }
 
 @media only screen and (min-width: 1000px) {
   .site-header--fixed {
@@ -1371,7 +1383,7 @@ ul.menu a,
 .site-logo img {
   display: block;
   max-width: 100%;
-  max-height: calc( var(--theme-logo-height) * var(--theme-customify-unit));
+  max-height: var(--theme-header-logo-height);
   width: auto;
   height: auto; }
 
