--- a/style.css
+++ b/style.css
@@ -1189,6 +1189,8 @@ ul.menu a,
       transform: translateY(-50%); }
       .site-header--mobile .menu-item--cart > a {
         color: currentColor; }
+    .site-header--mobile .site-logo img {
+      max-height: 30px; }
   body:not(.has-site-header-fixed) .site-header--mobile {
     background-color: var(--current-light-primary); }
     body:not(.has-site-header-fixed) .site-header--mobile:after {
